Bepro 1525 recent bounties empty with recent issues created (#951)
* fix IssueParser

* adjusting spaces

* adjusting css to fix break funding recent bounty

* adding text-truncate to review component

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -467,7 +467,7 @@ li {
   border-radius: math.div($m, 2);
   transition: 0.8 ease-in-out;
   margin-bottom: $m;
-  max-height: 193px;
+  max-height: 220px;
   &:last-child {
     margin-bottom: 0;
   }
